@@ -14,6 +14,7 @@ minor:
 - Disable non-relevant transformers warning
 - Add full requirement install option (see full_requirements.txt)
 - Make gensim requirement explicit instead of relying on flair's dependency tree
+- Directly utilize ELMo from allennlp instead of flair by bumping allennlp requirement
 
 -------------------------------------------------------------------------------
 Feb 23, 2022 1.3.2
